# mlx-benchmarks

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  cspell.json  flake.nix  osv-scanner.toml  pyproject.toml  requirements.txt  schema.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark-request.yml  bug.yml  config.yml
.github/workflows/: ci-gate.yml  codeql.yml  dependency-review.yml  deploy-space.yml  dry-run-publish.yml  release-please.yml  test.yml  validate-schema.yml
configs/: LAYOUT.md
configs/lm-eval/: coding.toml  reasoning.toml
configs/lm-eval/qwen3-tasks/: humaneval_instruct_qwen3.yaml  mbpp_instruct_qwen3.yaml  utils.py
configs/mlxbench/: throughput.toml
configs/vllm/: benchmark_serving.toml
docs/: architecture.md  schema.md
docs/journal/: 2026-04-10-bifrost-benchmark-session.md  2026-04-19-qwen36-benchmark-session.md
examples/: envelope.invalid.json  envelope.valid.json
harness/framework-eval/: README.md  eval_google_adk.py  eval_openai_tool_calling.py  eval_qwen_agent.py  eval_smolagents.py  run_all.sh
scripts/: deploy_space.py  publish_run.py  validate_schema.py
space/: README.md  app.py  requirements.txt
space/tests/: test_charts.py
src/mlx_benchmarks/: __init__.py  cli.py  envelope.py  logging_config.py  publish.py  system.py
src/mlx_benchmarks/converters/: __init__.py  base.py  framework_eval.py  lm_eval.py  vllm.py
tests/: conftest.py  test_cli.py  test_framework_eval_converter.py  test_lm_eval_converter.py  test_publish.py  test_schema.py  test_system.py  test_vllm_converter.py
tests/fixtures/: framework_eval_sample.json  lm_eval_results_sample.json  vllm_benchmark_serving_sample.json
